# learn_datafusion

./: Cargo.toml  README.md
src/: lib.rs  plain_text_table.rs
test_data/plain_text_table/: users.txtable
tests/: plain_text_table_test.rs
