[package]
name = "learn_datafusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = { version = "37.0.0", features = ["avro"] }
object_store = { version = "0.9.1", features = ["aws"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "fs"] }
url = "2.2"
async-trait = "0.1.80"
futures = "0.3.30"
